kube-compose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-with-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 'academiaonline/nginx:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
              readOnly: false
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              readOnly: true
              subPath: nginx.conf
            - name: nginx-default
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
              subPath: default.conf
            - name: nginx-html
              mountPath: /usr/share/nginx/html/
              readOnly: false
            - name: nginx-run
              mountPath: /var/run
              readOnly: false
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-conf
          configMap:
            defaultMode: 400
            items:
              - key: nginx.conf
                path: nginx.conf
            name: nginx.conf
        - name: nginx-default
          secret:
            items:
              - key: default.conf
                path: default.conf
            defaultMode: 400
            secretName: default.conf
        - name: nginx-html
          persistentVolumeClaim:
            claimName: nginx-pvc
        - name: nginx-run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 8080
  selector:
    app: nginx
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx-svc
